# mvp-auth

./: README.md  pyproject.toml
mvpauth/: __init__.py  config.py
mvpauth/core/: exceptions.py  passwords.py  schemas.py  tokens.py
mvpauth/integrations/fastapi/: __init__.py  dependencies.py  router.py  routes.py
mvpauth/services/: auth_service.py  password_service.py  user_service.py
mvpauth/storage/: protocols.py
mvpauth/storage/memory/: __init__.py  session_repo.py  token_repo.py  user_repo.py
mvpauth/storage/sqlalchemy/: __init__.py  models.py  session_repo.py  storage.py  token_repo.py  user_repo.py
tests/: conftest.py
tests/core/: test_passwords.py  test_schemas.py  test_tokens.py
tests/integrations/: test_fastapi_router.py
tests/services/: test_auth_service.py  test_password_service.py  test_user_service.py
